Optimize the link

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -47,7 +47,13 @@ layout: default
       <section class="page__content" itemprop="text">
         {{ content }}
 
-        {% if page.citation and page.paperurl and page.slidesurl and page.bibtexurl %}
+        {% if page.paperurl and page.slidesurl and page.posterurl %}
+          <p><a href="{{ page.paperurl }}" target="_blank">Download Paper</a> | <a href="{{ page.slidesurl }}" target="_blank">Download Slides</a> | <a href="{{ page.posterurl }}" target="_blank">Download Poster</a></p>
+        {% elsif page.paperurl %}
+          <p><a href=" {{ page.paperurl }} " target="_blank">Download Paper</a></p>
+        {% elsif page.paperurl and page.bibtexurl %}
+          <p style="font-size: smaller"><a href="{{ page.paperurl }}">Download Paper</a> | <a href="{{ page.bibtexurl }}">Download Bibtex</a></p>
+        {% elsif page.citation and page.paperurl and page.slidesurl and page.bibtexurl %}
           <p style="font-size: smaller">Recommended citation: {{ page.citation }}<br /><a href="{{ page.paperurl }}">Download Paper</a> | <a href="{{ page.slidesurl }}">Download Slides</a> | <a href="{{ page.bibtexurl }}">Download Bibtex</a></p>
         {% elsif page.citation and page.paperurl and page.slidesurl %}
           <p style="font-size: smaller">Recommended citation: {{ page.citation }}<br /><a href="{{ page.paperurl }}">Download Paper</a> | <a href="{{ page.slidesurl }}">Download Slides</a></p>
